tests/golden/type_errors/map_for_in.cd
for item in {"a": 1} {
  print item;
}
